--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
     <div class="header">
     </div>
     <!-- Begin MailChimp Signup Form -->
-    <link href="http://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     <style type="text/css">
       #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
   /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
 <div id="mc_embed_signup">
-  <form action="http://twitter.us14.list-manage.com/subscribe/post?u=2ab04fce6bf2fd8ebac6f9197&amp;id=bca4f48de7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+  <form action="https://twitter.us14.list-manage.com/subscribe/post?u=2ab04fce6bf2fd8ebac6f9197&amp;id=bca4f48de7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
       <label for="mce-EMAIL">Great! We'll contact you once the app is ready.</label>
       <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
