--- a/index.html
+++ b/index.html
@@ -3,6 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Simplify</title>
+  <meta name="description" content="Simplify - a tool which makes project management easier and more transparent.">
+
+  <!-- Facebook Open Graph data -->
+  <meta property="og:title" content="Simplify" />
+  <meta property="og:type" content="https://pavlad.github.io/simplify-landing/" />
+  <meta property="og:url" content="https://pavlad.github.io/simplify-landing/" />
+  <meta property="og:image" content="http://res.cloudinary.com/banana-cake/image/upload/v1472764468/logo_simplify.png" />
+  <meta property="og:description" content="Simplify - a tool which makes project management easier and more transparent." />
+  <meta property="og:site_name" content="Simplify" />
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="<%= DEFAULT_META['twitter_account'] %>">
+  <meta name="twitter:title" content="Simplify">
+  <meta name="twitter:description" content="Simplify - a tool which makes project management easier and more transparent.">
+  <meta name="twitter:creator" content="<%= DEFAULT_META['twitter_account'] %>">
+  <meta name="twitter:image:src" content="http://res.cloudinary.com/banana-cake/image/upload/v1472764468/logo_simplify.png">
+
+  <!-- Google+ Schema.org markup -->
+  <meta itemprop="name" content="Simplify">
+  <meta itemprop="description" content="Simplify - a tool which makes project management easier and more transparent.">
+  <meta itemprop="image" content="http://res.cloudinary.com/banana-cake/image/upload/v1472764468/logo_simplify.png">
+
   <script   src="https://code.jquery.com/jquery-3.1.0.js"   integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="   crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js"></script>
@@ -151,6 +174,16 @@
 
 <!--End mc_embed_signup-->
 </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-83548636-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
 
