--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://res.cloudinary.com/banana-cake/image/upload/v1472755325/ocean.jpg'); position: relative;">
     <div class="banner-content banner-homepage">
       <h1>Simplify</h1>
-      <h3>Project managment for growing consultancies</h3>
+      <h3>Project management for growing consultancies</h3>
       <br>
       <button class="ui big inverted button" id="sign-up">Interested?</button>
       <div class="browser">
